Adding new button bar

--- a/templates/dashboardPanel.mustache
+++ b/templates/dashboardPanel.mustache
@@ -108,9 +108,16 @@
               </div>
               <nav class="header">
                 <ul>
-                  <li>
-                    <a href="#" title="saveDashboard" onClick="saveDashboard()">Save</a>
-                  </li>
+                  <li class="left" ><a href="#" title="undo" onClick="">Undo</a></li>
+                </ul>
+                <ul>
+                  <li class="right"><a href="#" title="redo" onClick="">Redo</a></li>
+                </ul>
+                <ul>
+                  <li><a href="#" title="saveDashboard" onClick="saveDashboard()">Save</a></li>
+                </ul>
+                <ul>
+                  <li><a href="#" title="cloneDashboard" onClick="">Clone</a></li>
                 </ul>
               </nav>
             </div>  
