--- a/public/css/dashboardPanel.css
+++ b/public/css/dashboardPanel.css
@@ -111,6 +111,7 @@ div.dashboard{
   min-height: 500px;
   border: 1px solid rgba(102, 45, 145, 0.7);
   padding: 5px 0px 0px 15px;
+  margin-right: 10px;
   background-color: #ece9e9;  
   
   -moz-box-shadow:inset 0 0 2px rgba(0, 0, 0, 1);
@@ -120,28 +121,6 @@ div.dashboard{
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
-}
-
-#toolBoxHeader{
-  margin: 10px;
-  text-align: left;
-}
-
-#toolBoxHeader span.titleHover{
-  font-size: 14px;
-  font-weight: bold;
-  color: white;
-  margin-right: 1px;
-  text-shadow: none;
-  opacity: 1;
-}
-
-#toolBoxHeader span {  
-  font-size: 14px;
-  font-weight: bold;
-  color: #000000;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, .7);
-  opacity: .6;
 }
 
 header div.logo {
@@ -160,102 +139,81 @@ text-indent: -900px;
 }
 
 header nav {
+ margin: 0px;
+ padding: 10px 10px 0px 0px;
  float: right;
- margin: 11px 12px 0px 0px;
+ width: 294px;
 }
 
 header nav a{
   height: 25px;
   line-height: 27px;
   font-size: 15px;
-  color: white;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.8);
-  background: #938EAF;
+  color: #3f3d3d;
+  text-shadow: 0 -1px 1px rgba(255, 255, 255, .28);
+  background: -webkit-linear-gradient(top, #d8d7da 0%, #bdbfbe 100%);
+  background: -moz-linear-gradient(top, #d8d7da 0%, #bdbfbe 100%);
   opacity: .9;
   padding: 5px 10px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
-  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
-  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
-  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.15),0 1px 0 rgba(255, 255, 255, 0.15) inset;
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4),0 1px 0 rgba(255, 255, 255, 0.4) inset;
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4),0 1px 0 rgba(255, 255, 255, 0.4) inset;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4),0 1px 0 rgba(255, 255, 255, 0.4) inset;
   cursor: pointer;
 }
 
 header nav a:hover{
-  background: #764293;
+  background: -webkit-linear-gradient(top, #b4b2b7 0%, #cac9cf 100%);
+  background: -moz-linear-gradient(top, #b4b2b7 0%, #cac9cf 100%);
   text-decoration: none;
+  color: #3f3d3d;
 }
 
-.tool{
-  width: 100%; 
-  color: rgba(0, 0, 0, .6);
-  background-color: rgba(147, 142, 174, 0.4);
-  font-weight: light;
-  text-align: left;
-  padding-top: 10px;
-  padding-bottom: 10px;  
+header nav a:active{
+  background: -webkit-linear-gradient(top, #8a898c 0%, #b0afb5 100%);
+  background: -moz-linear-gradient(top, #8a898c 0%, #b0afb5 100%);
+  text-decoration: none;
+  color: white;
 }
 
-.tool .toolTitle{
-  padding-left: 10px;
+header nav li.right{
+  margin-left: 0px;
 }
 
-#chat .chatMessage{
-  padding-left: 20px;
-  padding-right: 10px;
-  margin-bottom: 5px;
-  word-wrap: break-word;
+header nav li.left{
+  margin-right: 0px;
 }
 
-#chat #messageSendButton{
-  display: none;
+header nav li.right a{
+  -moz-border-radius: 0px 6px 6px 0px;
+  -webkit-border-radius: 0px 6px 6px 0px;
+  border-radius: 0px 6px 6px 0px;
 }
 
-#chat #messageField {
-  width: 85%;
-  overflow-x: hide;
-  background: white;
-  height: 27px;
+header nav li.left  a{
+  -moz-border-radius: 6px 0px 0px 6px;
+  -webkit-border-radius: 6px 0px 0px 6px;
+  border-radius: 6px 0px 0px 6px;
+  margin-right: 0px;
+}
+
+header nav > ul > li {
+  float: left;
+  margin-right: 20px;
+}
+
+nav ul, nav li {
   margin: 0px;
-  padding: 5px;
-  border-width: 1px;
-  display: inline;
-  -moz-border-radius: 6px;
-   -webkit-border-radius: 6px;
-   border-radius: 6px;
-}
-
-#chat #chatInput{
-  width: 100%;
-  text-align: center;
-}
-
-#chat #chatList{
-  width: 100%;
-}
-
-#chat input{
-  padding: 5px;  
-  font-size: 14px;
-  text-shadow: 0px 1px 0px #fff;  
-  outline: none;  
-  background: -webkit-gradient(linear, left top, left bottombottom, from(#bcbcbe), to(#ffffff));  
-  background: -moz-linear-gradient(top,  #bcbcbe,  #ffffff);  
-  -webkit-border-radius: 3px;  
-  -moz-border-radius: 3px;  
-  border-radius: 3px;  
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-input:focus {
-  -webkit-box-shadow: 0 0 5px rgba(102, 45, 145, 1); 
-  -moz-box-shadow: 0 0 5px rgba(102, 45, 145, 1); 
+  list-style: none none;
+  list-style-image: none;
 }
 
 footer {
- height: 30px 
+ height: 30px;
+ padding: 5px 10px 0px 0px; 
 }
 
 .toolBox{
@@ -279,10 +237,6 @@ a:link {text-decoration: none}
 a:visited {text-decoration: none}
 a:active {text-decoration: none}
 a:hover {text-decoration: underline; color: white;}
-
-header li {
-float: left;
-}
 
 #closeNote{
   display: inline-block;
