--- a/public/css/dashboardPanel.css
+++ b/public/css/dashboardPanel.css
@@ -125,7 +125,7 @@ div.dashboard{
 
 header div.logo {
  float: left;
- margin: 5px 0px 0px 35px;
+ margin: 5px 0px 0px 25px;
 }
 
 header div.logo a {
@@ -149,10 +149,10 @@ header nav a{
   height: 25px;
   line-height: 27px;
   font-size: 15px;
-  color: #3f3d3d;
+  color: #555555;
   text-shadow: 0 -1px 1px rgba(255, 255, 255, .28);
-  background: -webkit-linear-gradient(top, #d8d7da 0%, #bdbfbe 100%);
-  background: -moz-linear-gradient(top, #d8d7da 0%, #bdbfbe 100%);
+  background: -webkit-linear-gradient(top, #ece9e9 0%, #d8d7da 100%);
+  background: -moz-linear-gradient(top, #d8d7da 0%, #d8d7da 100%);
   opacity: .9;
   padding: 5px 10px;
   border: 1px solid rgba(0, 0, 0, 0.3);
@@ -166,17 +166,16 @@ header nav a{
 }
 
 header nav a:hover{
-  background: -webkit-linear-gradient(top, #b4b2b7 0%, #cac9cf 100%);
-  background: -moz-linear-gradient(top, #b4b2b7 0%, #cac9cf 100%);
   text-decoration: none;
-  color: #3f3d3d;
+  color: #252525;
 }
 
 header nav a:active{
-  background: -webkit-linear-gradient(top, #8a898c 0%, #b0afb5 100%);
-  background: -moz-linear-gradient(top, #8a898c 0%, #b0afb5 100%);
+  background: -webkit-linear-gradient(top, #d8d7da 0%, #ece9e9 100%);
+  background: -moz-linear-gradient(top, #d8d7da 0%, #ece9e9 100%);
+  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4),0 1px 0px rgba(0, 0, 0, 0.5) inset;
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4),0 1px 0px rgba(0, 0, 0, 0.5) inset;
   text-decoration: none;
-  color: white;
 }
 
 header nav li.right{
