--- a/public/css/dashboardPanel.css
+++ b/public/css/dashboardPanel.css
@@ -328,12 +328,23 @@ a:hover {text-decoration: underline; color: white;}
   width:100%;
 }
 
+div.closePopUp{
+  position: absolute;
+  right: -15px;
+  top: -15px;
+  background: url("/images/closePopUp.png");
+  height: 30px;
+  width: 30px;
+  background-size: 100%;   
+}
+
 #popUp {
   position:absolute;
-  background-color:#eeeeee;
-  width:300px;
-  height:300px;
+  background-color: white;
+  width: 500px;
+  height: 300px;
   z-index: 9002; 
+  border: 4px solid rgba(0, 0, 0, 1);
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px; 
