Decoupling dashboard and dataset

--- a/templates/dashboardPanel.mustache
+++ b/templates/dashboardPanel.mustache
@@ -21,6 +21,7 @@
     <script src="/dataSet.js" type="text/javascript"></script> 
     <script src="/renderer.js" type="text/javascript"></script>
     <script src="/dashboard.js" type="text/javascript"></script>
+    <script src="/xhr.js" type="text/javascript"></script> 
     
     <script type="text/javascript">
 
@@ -48,8 +49,8 @@
 
     function saveDashboard() {
       //displayNote('ALERT');
-      showPopUp('popUp');
-      //ASCOT.dashboard.save();
+      //showPopUp('popUp');
+      ASCOT.dashboard.save();
     }
     
     function tabClicked(){
